--- a/app/src/main/res/layout/activity_tela_utilizador.xml
+++ b/app/src/main/res/layout/activity_tela_utilizador.xml
@@ -19,6 +19,7 @@
         />
 
     <ImageView
+        android:id="@+id/userImage"
         android:layout_width="100sp"
         android:layout_height="100sp"
         android:src="@drawable/ic_user"
