--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -20,24 +20,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Perfil"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        android:onClick="verPerfil"/>
+    <androidx.fragment.app.FragmentContainerView
+        xmlns:tomtom="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/map_fragment"
+        android:name="com.tomtom.sdk.map.display.ui.MapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tomtom:mapKey="2038rElSGPRbkdVZyl9yl6I1j8C91MAd" />
 
-    <Button
-        android:id="@+id/button2"
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnCamera"
+        style="@style/Button"
+        android:text="Camera"
+        android:layout_marginTop="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Camera"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:onClick="abrirCamera"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
