correcao de erros

--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -35,9 +35,9 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnMapa"
-        android:text="Camera"
+        android:text="Mapa"
         style="@style/Button"
-        android:drawableRight="@drawable/ic_camera"
+        android:drawableRight="@drawable/ic_map"
         android:layout_marginTop="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
