Adicionei o espaço para o search mas ainda não consegui meter a funcionar

--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -20,6 +20,25 @@
         app:title="@string/app_name"
         app:titleTextColor="#fff" />
 
+    <com.tomtom.sdk.search.ui.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+
+
+    <com.tomtom.sdk.search.ui.SearchResultsView
+        android:id="@+id/search_results_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/search_view"/>
+
+    <com.tomtom.sdk.search.ui.SearchSuggestionView
+        android:id="@+id/search_suggestion_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/search_results_view"/>
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCamera"
