--- a/app/src/main/res/layout/activity_form_cadastro.xml
+++ b/app/src/main/res/layout/activity_form_cadastro.xml
@@ -7,24 +7,35 @@
     android:background="@drawable/background"
     tools:context=".FormCadastro">
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="116dp"
+        android:layout_height="98dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        android:id="@+id/txtCadastro"
+        android:id="@+id/txtRegisto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_cadastro"
-        android:textSize="50sp"
+        android:layout_marginTop="124dp"
+        android:text="@string/title_registo"
         android:textColor="@color/white"
+        android:textSize="50sp"
         android:textStyle="bold"
-        android:layout_marginTop="100sp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/containerComponents"
         style="@style/ContainerComponents"
-        app:layout_constraintTop_toBottomOf="@id/txtCadastro"
+        app:layout_constraintTop_toBottomOf="@id/txtRegisto"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
@@ -51,9 +62,9 @@
         />
 
     <EditText
-        android:id="@+id/editSenha"
+        android:id="@+id/editPass"
         style="@style/Edit_Text"
-        android:hint="Senha"
+        android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@id/editEmail"
         app:layout_constraintStart_toStartOf="@id/containerComponents"
@@ -61,10 +72,10 @@
         />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnCadastrar"
+        android:id="@+id/btnRegistar"
         style="@style/Button"
         android:layout_marginTop="32dp"
-        android:text="Cadastrar"
+        android:text="Registar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/containerComponents" />
