--- a/app/src/main/res/layout/activity_form_login.xml
+++ b/app/src/main/res/layout/activity_form_login.xml
@@ -37,9 +37,9 @@
         />
 
     <EditText
-        android:id="@+id/editSenha"
+        android:id="@+id/editPass"
         style="@style/Edit_Text"
-        android:hint="Senha"
+        android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="@id/containerComponents"
         app:layout_constraintEnd_toEndOf="@id/containerComponents"
@@ -52,7 +52,7 @@
         android:text="@string/entrar"
         app:layout_constraintStart_toStartOf="@id/containerComponents"
         app:layout_constraintEnd_toEndOf="@id/containerComponents"
-        app:layout_constraintTop_toBottomOf="@id/editSenha"
+        app:layout_constraintTop_toBottomOf="@id/editPass"
         />
 
     <ProgressBar
@@ -68,10 +68,10 @@
         />
 
     <TextView
-        android:id="@+id/textTelaCadastro"
+        android:id="@+id/textTelaRegisto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_cadastro"
+        android:text="@string/text_registo"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:textStyle="bold"
