--- a/app/src/main/res/layout/activity_interesses_user.xml
+++ b/app/src/main/res/layout/activity_interesses_user.xml
@@ -33,55 +33,50 @@
         app:layout_constraintTop_toBottomOf="@id/logo"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/containerComponents"
-        style="@style/ContainerComponents"
-        android:layout_width="361dp"
-        android:layout_height="523dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtInteresses" />
+    <LinearLayout
+        android:layout_width="411dp"
+        android:layout_height="563dp"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/txtInteresses"
+        tools:context=".InteressesUser"
+        tools:layout_editor_absoluteX="0dp">
 
-    <EditText
-        android:id="@+id/editTextInteresse"
-        style="@style/Edit_Text"
-        android:layout_width="355dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="#ffffff"
-        android:hint="Adicione um interesse"
-        android:padding="10dp"
-        app:layout_constraintEnd_toEndOf="@id/containerComponents"
-        app:layout_constraintStart_toStartOf="@id/containerComponents"
-        app:layout_constraintTop_toTopOf="@id/containerComponents" />
+        <EditText
+            android:id="@+id/editTextInteresse"
+            style="@style/Edit_Text"
+            android:layout_width="355dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="#ffffff"
+            android:hint="Adicione um interesse"
+            android:padding="10dp" />
 
-    <android.widget.Button
-        android:id="@+id/buttonAdicionar"
-        style="@style/Button"
-        android:layout_width="338dp"
-        android:layout_height="74dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        android:onClick="adicionarInteresse"
-        android:text="Adicionar"
-        app:layout_constraintEnd_toEndOf="@id/containerComponents"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@id/containerComponents"
-        app:layout_constraintTop_toBottomOf="@id/editTextInteresse" />
+        <android.widget.Button
+            android:id="@+id/buttonAdicionar"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Adicionar Interesse" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewInteresses"
-        android:layout_width="341dp"
-        android:layout_height="336dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonAdicionar" />
+        <android.widget.Button
+            android:id="@+id/buttonVerPerfil"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Ver Perfil" />
+
+        <TextView
+            android:id="@+id/textViewInteresses"
+            android:layout_width="match_parent"
+            android:layout_height="283dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/white"
+            android:textStyle="bold"
+            android:padding="10dp"/>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
