--- a/app/src/main/res/layout/activity_tela_utilizador.xml
+++ b/app/src/main/res/layout/activity_tela_utilizador.xml
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@id/userName"
         app:layout_constraintStart_toEndOf="@id/emailIcon"
         />
-    
+
     <Button
         android:id="@+id/btnDeslogar"
         android:layout_width="match_parent"
@@ -79,9 +79,21 @@
         android:backgroundTint="@color/black"
         android:padding="20sp"
         android:layout_margin="20sp"
-        app:layout_constraintTop_toBottomOf="@id/userEmail"
+        app:layout_constraintTop_toBottomOf="@id/textViewInteresses"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
-    
+
+    <TextView
+        android:id="@+id/textViewInteresses"
+        android:layout_width="373dp"
+        android:layout_height="251dp"
+        android:layout_marginTop="52dp"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userEmail" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
