--- a/app/src/main/res/layout/activity_tela_utilizador.xml
+++ b/app/src/main/res/layout/activity_tela_utilizador.xml
@@ -90,21 +90,28 @@
         android:backgroundTint="@color/black"
         android:padding="20sp"
         android:layout_margin="20sp"
-        app:layout_constraintTop_toBottomOf="@id/textViewInteresses"
+        app:layout_constraintTop_toBottomOf="@id/containerComponents"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
 
-    <TextView
-        android:id="@+id/textViewInteresses"
-        android:layout_width="373dp"
-        android:layout_height="251dp"
-        android:layout_marginTop="52dp"
-        android:background="@color/white"
-        android:padding="10dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+    <ScrollView
+        android:id="@+id/containerComponents"
+        style="@style/ContainerComponents"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/userEmail"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/userEmail" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+
+        <LinearLayout
+            android:id="@+id/lnComponents"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
